# beagleconnect

./: .gitignore  .gitmodules  802154-launchpad-demo.adoc  802154-launchpad-demo.md  Linux-to-Zephyr-TCP-Communication-over-IEEE-802.15.4-and-6LowPAN.adoc  Linux-to-Zephyr-TCP-Communication-over-IEEE-802.15.4-and-6LowPAN.md  Lisboa-Greybus-Demo-Instructions.md  README.asciidoc  README.md  using-linux-zephyr-and-greybus-for-iot-with-the-cc1352r-sensortag.md
Gerber/: BeagleDust Rev A0_20180905-1-2.drl  fab.art  paste_top.art  silk_bot.art  top.art
LeashPCB/: LeashPCB-cache.lib  LeashPCB.bak  LeashPCB.kicad_pcb  LeashPCB.lib  LeashPCB.sch  sym-lib-table
docs/: BCF-C5-Pinout.ods  Green_Gateway.md  LED.md  MSP430.md  README.html  README.md  ROADMAP.md  bom  generate_block_diagrams.ipynb
docs/SRM/: chapter-01.adoc  (+6 more)
graphics/: bcf_block_diagram.dia
hw/: README.md
sw/: README.asciidoc  README.md  arm-build-firmware.sh  build-firmware.sh  cc2538-bsl.py  env.sh  flash-cc1352-bcfserial.sh  flash-cc1352-clickid.sh  flash-cc1352-gateway.sh  flash-cc1352-greybus.sh  flash-cc1352-sensortest.sh  flash-cc1352.sh  flash-clickid.sh  flash-gateway-step1.sh  flash-gateway-step2.sh  flash-launchpad-sensortest.sh  flash-msp430.sh  load_gb_modules.sh  net-up.sh  sensortest-top.py  setup.sh  test-net.sh  test-tx.py  toggle_gp_led.sh
sw/zephyrproject/sensortest/: CMakeLists.txt  beagleconnect_freedom.overlay  cc1352r1_launchxl.overlay  overlay-subghz.conf  prj.conf
sw/zephyrproject/sensortest/sgp30/: CMakeLists.txt  Kconfig  sgp30.c  sgp30.h
sw/zephyrproject/sensortest/src/: main.c
(+402 files in other folders)
